# hprint

./: .gitignore  CMakeLists.txt  README.md
cmake/: hprintConfig.cmake.in
example/: demo.cpp
include/: hprint
include/hprint/: hprint.hpp
